--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -27,11 +27,12 @@ p{
   color: #DD6E1E;
 }
 
-a{
+.Home-choice-analyse, .Home-choice-compare{
   text-decoration: none;
-  border: 1px solid white;
+  border: 1px solid #575757;
   width: 47%;
   border-radius: 10px;
   text-align: center;
   padding: 10px 0;
+  font-weight: bold;
 }
