--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -1,7 +1,6 @@
 select option {
   margin-left: 40px;
 }
-
 .Players-container {
   position: relative;
   display: flex;
@@ -13,7 +12,6 @@ select option {
   position: absolute;
   height: 100%;
 }
-
 .PlayerA{
   background:#1F1D1D;
   background-position: center;
@@ -22,7 +20,6 @@ select option {
   max-width: 95%;
   min-width: 2%;
 }
-
 .PlayerB{
   background: #DD6E1E;
   width: 51.5%;
@@ -53,21 +50,25 @@ clip-path: polygon(50px 0%, 100% 0, 100% 100%, 0% 100%);
   justify-content: space-between;
 }
 .Search-container input{
-  width: 80%;
+  width: 65%;
   height: 42px;
   -webkit-clip-path: polygon(0 0, 100% 0, 97% 100%, 0% 100%);
 clip-path: polygon(0 0, 100% 0, 97% 100%, 0% 100%);
 padding-left: 10px;
-
 }
 .Search-container select{
-  width: 20%;
+  width: 35%;
   height: 42px;
-  -webkit-clip-path: polygon(11% 0%, 100% 0, 100% 100%, 0% 100%);
-  clip-path: polygon(11% 0%, 100% 0, 100% 100%, 0% 100%);
+  -webkit-clip-path: polygon(6% 0%, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(6% 0%, 100% 0, 100% 100%, 0% 100%);
   border-radius: 0;
   -webkit-appearance: none;
   text-align-last: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url('../../assets/imgs/arrow.png') 92% / 12px no-repeat #ffffff;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .resizer {
@@ -94,19 +95,62 @@ padding-left: 10px;
 .resizer:hover {
   cursor: ew-resize;
 }
-
 input::-webkit-input-placeholder, input { /* Edge */
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
 }
-
 input:-ms-input-placeholder, input { /* Internet Explorer 10-11 */
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
 }
-
 input::placeholder, input {
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
+}
+li{
+  text-align: center;
+  list-style: none;
+}
+.img-player{
+  max-width: 120px;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+.Player-info-container{
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+.Player-info{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.Stats-container-hidden{
+  overflow-x: hidden;
+  white-space: nowrap;
+  width: 450px;
+}
+.Stats-item-container{
+  display: flex;
+  justify-content: center;
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 700px;
+}
+.Stats-item{
+  width: 200px;
+  height: 100px;
+  background-color: #1F1D1D;
+  margin-right: 20px;
+  margin-bottom: 20px
 }
 
+.PlayerA .Stats-item{
+  background-color: #DD6E1E;
+}
+.PlayerB .Stats-item{
+  background-color: #1F1D1D;
+}
