donut + chart + bar

--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -1,3 +1,32 @@
+/* GENERAL */
+
+:root {
+  --color-player-a: #2D3142;
+  --color-player-b: #E2813A;
+}
+
+
+ul{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 10px;
+}
+
+li{
+  width: 125px;
+  height: 125px;
+  background-size: contain;
+  margin-right: 10px;
+  line-height: 125px;
+  background-color: white;
+}
+
+
+svg{
+  display: block;
+}
+
 select option {
   margin-left: 40px;
 }
@@ -6,14 +35,14 @@ select option {
   display: flex;
   width: 100vw;
   height: 100vh;
-  background:#1F1D1D;
+  background:var(--color-player-a);
 }
 .content-box {
   position: absolute;
   height: 100%;
 }
 .PlayerA{
-  background:#1F1D1D;
+  background:var(--color-player-a);
   background-position: center;
   background-repeat: no-repeat;
   width: 48.5%;
@@ -21,26 +50,42 @@ select option {
   min-width: 2%;
 }
 .PlayerB{
-  background: #DD6E1E;
+  background: var(--color-player-b);
   width: 51.5%;
   -webkit-clip-path: polygon(50px 0%, 100% 0, 100% 100%, 0% 100%);
 clip-path: polygon(50px 0%, 100% 0, 100% 100%, 0% 100%);
   max-width: 98%;
   min-width: 5%;
 }
-.PlayerA .Player-container{
+.PlayerA{
   color: #ffffff;
+  fill: #ffffff;
 }
 .Player-container{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  height: 180px;
+  height: 300px;
   width: 70%;
   margin: 0 auto;
+}
+.Player-container-plus{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  margin: 0 auto;
+  background-color: var(--color-player-b);
+}
+.PlayerA .Player-container-plus{
+  background-color: var(--color-player-a);
 }
 .description{
   font-size: 14px;
@@ -78,7 +123,7 @@ padding-left: 10px;
   width: 50px;
   top: 50%;
   right: -50px;
-  background-color: #1F1D1D;
+  background-color: var(--color-player-a);
   border-radius: 50%;
   border: 5px solid #ffffff;
   transform: translateY(-50%);
@@ -116,41 +161,151 @@ li{
 .img-player{
   max-width: 120px;
   border-radius: 50%;
-  border: 2px solid white;
+  border: 3px solid white;
 }
 .Player-info-container{
   justify-content: space-around;
   align-items: center;
-  height: 100%;
+  height: 95%;
 }
 .Player-info{
   display: flex;
   justify-content: space-around;
   width: 100%;
 }
-.Stats-container-hidden{
+.Stats-container{
+  display: flex;
   overflow-x: hidden;
   white-space: nowrap;
+  justify-content: center;
   width: 450px;
+  align-items: center;
 }
 .Stats-item-container{
+  display: inline-block;
+  width: auto;
+}
+.Stats-item-container:nth-child(2){
+  display: none;
+}
+.Stats-container-plus{
   display: flex;
-  justify-content: center;
-  overflow-x: auto;
-  white-space: nowrap;
-  width: 700px;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  width: 80%;
 }
 .Stats-item{
   width: 200px;
   height: 100px;
-  background-color: #1F1D1D;
   margin-right: 20px;
   margin-bottom: 20px
 }
 
-.PlayerA .Stats-item{
-  background-color: #DD6E1E;
+.PlayerA .Stats-item, .PlayerA .Stats-item-plus{
+  background-color: var(--color-player-b);
 }
-.PlayerB .Stats-item{
-  background-color: #1F1D1D;
+.PlayerB .Stats-item, .PlayerB .Stats-item-plus{
+  background-color: var(--color-player-a);
 }
+.PlayerA .Stats-item-plus{
+  -webkit-clip-path: polygon(0 0, 100% 0, 98% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 98% 100%, 0% 100%);
+}
+.PlayerB .Stats-item-plus{
+  -webkit-clip-path: polygon(10px 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(10px 0, 100% 0, 100% 100%, 0% 100%);
+}
+.PlayerA .all-content{
+  background-color: var(--color-player-a);
+}
+.PlayerB .all-content{
+  background-color: var(--color-player-b);
+}
+.all-content{
+  overflow-y: hidden;
+  height: 100%;
+  align-items: flex-end;
+  display: flex;
+}
+.up{
+  transform: translateY(-150%);
+}
+.all-content .Player-container-plus{
+  transition: 1s ease-in;
+}
+.Stats-item-plus{
+  width: 100%;
+  height: 65px;
+  margin-bottom: 20px;
+}
+.PlayerB .Player-container-plus-hide .Stats-item-container-plus{
+  margin-left: 20px;
+}
+.text-up{
+  position: absolute;
+  bottom: 20px;
+  display: inline;
+  background: yellow;
+  transform: translateX(-50%);
+  left: 50%;
+  z-index: 999;
+}
+.hidden{
+  visibility: hidden;
+}
+
+.Player-container-plus-hide{
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  width: 40%;
+  margin: 0 auto;
+}
+
+.PlayerB .Player-container-plus-hide{
+  align-items: flex-start;
+}
+.wow{
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+.PlayerB .wow{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.fixed{
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+}
+.donut-chart-text-value{
+  font-size: 60%!important;
+}
+.donut-chart-text-subtext{
+  font-size: 30%!important;
+}
+
+.donut-chart-text-subtext:last-child{
+  display: none;
+}
+
+.donut-chart-arcs-arcpath-0{
+ fill: white;
+}
+
+.PlayerA .donut-chart-arcs-arcpath-1{
+  fill: var(--color-player-b);
+}
+.PlayerB .donut-chart-arcs-arcpath-1{
+  fill: var(--color-player-a);
+}
+
+.large{
+  width: 300px!important;
+  height: 300px!important;
+}
+
