--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,9 +4,11 @@
 }
 
 body, html{
-  font-family: 'Montserrat', sans-serif;
-  max-height: 100%;
-  overflow: hidden;
+  font-family: 'Montserrat', sans-serif!important;
+  position: relative;
+  background: white;
+  z-index: -11;
+  height: 100%; overflow: auto;
 }
 
 .left {
