--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,7 +2,9 @@
   --main-color: #2D3142;
   --second-color: #E2813A;
 }
-
+section{
+  position: relative;
+}
 .Home-container{
   background: var(--main-color) url('../../assets/imgs/Ballon.png') bottom right;
   height: 100vh;
