--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -4,13 +4,27 @@
   --color-player-a: #2D3142;
   --color-player-b: #E2813A;
 }
-
+.layer {
+  background-color: #2d3142eb;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 ul{
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   margin-top: 10px;
+}
+
+.container ul{
+  max-width: 70%;
+  margin: 0 auto;
+  max-height: 125px;
+  overflow: scroll;
 }
 
 li{
@@ -42,22 +56,31 @@ select option {
   height: 100%;
 }
 .PlayerA{
-  background:var(--color-player-a);
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 48.5%;
+  width: 50%;
   max-width: 95%;
-  min-width: 2%;
-}
-.PlayerB{
-  background: var(--color-player-b);
-  width: 51.5%;
-  -webkit-clip-path: polygon(50px 0%, 100% 0, 100% 100%, 0% 100%);
-clip-path: polygon(50px 0%, 100% 0, 100% 100%, 0% 100%);
-  max-width: 98%;
   min-width: 5%;
 }
-.PlayerA{
+
+.PlayerB{
+  background:var(--color-player-b);
+  width: 50%;
+  /* -webkit-clip-path: polygon(50px 0%, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(50px 0%, 100% 0, 100% 100%, 0% 100%); */
+  max-width: 95%;
+  min-width: 5%;
+}
+
+/* .ok{
+  -webkit-clip-path: polygon(20px 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(20px 0, 100% 0, 100% 100%, 0% 100%);
+  width: 2%;
+  background:var(--color-player-b);
+  position: absolute;
+  height: 100%;
+  left: 49.5%;
+  z-index: 999999;
+} */
+.PlayerA, .PlayerA .container input, .PlayerA .container select{
   color: #ffffff;
   fill: #ffffff;
 }
@@ -116,13 +139,17 @@ padding-left: 10px;
   font-family: 'Montserrat', sans-serif;
 }
 
+.PlayerA .container .Search-container select{
+  background: url('../../assets/imgs/arrow-white.png') 92% / 12px no-repeat #ffffff;
+}
+
 .resizer {
   position: absolute;
-  z-index: 9999;
+  z-index: 9999999;
   height: 50px;
   width: 50px;
   top: 50%;
-  right: -50px;
+  right: -30px;
   background-color: var(--color-player-a);
   border-radius: 50%;
   border: 5px solid #ffffff;
@@ -154,14 +181,52 @@ input::placeholder, input {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
+
+.PlayerA .container ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: white;
+}
+.PlayerA .container ::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+}
+.PlayerA .container :-ms-input-placeholder { /* IE 10+ */
+  color: white;
+}
+.PlayerA .container :-moz-placeholder { /* Firefox 18- */
+  color: white;
+}
+
+.PlayerB .container ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: black;
+}
+.PlayerB .container ::-moz-placeholder { /* Firefox 19+ */
+  color: black;
+}
+.PlayerB .container :-ms-input-placeholder { /* IE 10+ */
+  color: black;
+}
+.PlayerB .container :-moz-placeholder { /* Firefox 18- */
+  color: black;
+}
+
+.list-group-item { 
+  color: black;
+  transition: 0.2s ease;
+
+}
+
 li{
   text-align: center;
   list-style: none;
 }
 .img-player{
   max-width: 120px;
+  max-height: 120px;
   border-radius: 50%;
   border: 3px solid white;
+}
+.img-team{
+  position: absolute;
+  width: 100%;
 }
 .Player-info-container{
   justify-content: space-around;
@@ -178,14 +243,14 @@ li{
   overflow-x: hidden;
   white-space: nowrap;
   justify-content: center;
-  width: 450px;
+  width: 490px;
   align-items: center;
 }
 .Stats-item-container{
   display: inline-block;
   width: auto;
 }
-.Stats-item-container:nth-child(2){
+.Stats-item-container:nth-child(2), .Stats-item-container:nth-child(3){
   display: none;
 }
 .Stats-container-plus{
@@ -202,12 +267,13 @@ li{
   margin-bottom: 20px
 }
 
-.PlayerA .Stats-item, .PlayerA .Stats-item-plus{
+.PlayerA .Stats-item, .PlayerA .Stats-item-plus, .PlayerB .Search-all-container.fixed select, .PlayerB .Search-all-container.fixed input, .PlayerB .Search-all-container.fixed .Search-container{
   background-color: var(--color-player-b);
 }
-.PlayerB .Stats-item, .PlayerB .Stats-item-plus{
+.PlayerB .Stats-item, .PlayerB .Stats-item-plus, .PlayerA .Search-all-container.fixed select, .PlayerA .Search-all-container.fixed input, .PlayerA .Search-all-container.fixed .Search-container{
   background-color: var(--color-player-a);
 }
+
 .PlayerA .Stats-item-plus{
   -webkit-clip-path: polygon(0 0, 100% 0, 98% 100%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 98% 100%, 0% 100%);
@@ -216,9 +282,9 @@ li{
   -webkit-clip-path: polygon(10px 0, 100% 0, 100% 100%, 0% 100%);
   clip-path: polygon(10px 0, 100% 0, 100% 100%, 0% 100%);
 }
-.PlayerA .all-content{
+/* .PlayerA .all-content{
   background-color: var(--color-player-a);
-}
+} */
 .PlayerB .all-content{
   background-color: var(--color-player-b);
 }
@@ -257,6 +323,7 @@ li{
 
 .Player-container-plus-hide{
   display: none;
+  position: relative;
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-end;
@@ -267,13 +334,18 @@ li{
 .PlayerB .Player-container-plus-hide{
   align-items: flex-start;
 }
-.wow{
-  display: flex;
+.container{
+  width: inherit;
+  display: initial;
   height: 100%;
+}
+
+.container-flex{
+  display: flex;
   justify-content: center;
 }
-.PlayerB .wow{
-  display: flex;
+
+.container-flex-reverse{
   flex-direction: row-reverse;
 }
 
@@ -281,7 +353,12 @@ li{
   position: fixed;
   top: 0;
   z-index: 9999;
+  width: inherit;
+  max-height: 180px;
+  overflow: scroll;
 }
+
+
 .donut-chart-text-value{
   font-size: 60%!important;
 }
@@ -309,3 +386,7 @@ li{
   height: 300px!important;
 }
 
+.radar-chart-category-att, .radar-chart-category-def{
+  position: relative;
+  z-index: 99999;
+}
