--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -17,32 +17,13 @@
   background-color: #e2813aba;
 }
 
-ul{
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  margin-top: 10px;
-  max-height: 265px;
-  overflow: scroll;
-}
 
 .container ul{
   max-width: 70%;
   margin: 0 auto;
   max-height: 125px;
-  overflow: hidden;
-  position: relative;
 }
 
-li{
-  width: 125px;
-  height: 125px;
-  background-size: contain;
-  margin-right: 10px;
-  line-height: 125px;
-  background-color: white;
-  position: relative;
-}
 
 
 svg{
@@ -213,17 +194,48 @@ input::placeholder, input {
 .PlayerB .container :-moz-placeholder { /* Firefox 18- */
   color: black;
 }
-
+.list-group{
+  display: block;
+  width: 100%;
+  background: white;
+  max-height: 260px;
+  overflow: scroll;
+}
+.container .list-group{
+  max-height: 105px;
+}
 .list-group-item { 
   color: black;
   transition: 0.2s ease;
-
+  display: flex;
+  background-color: white;
+  align-items: center;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  border-bottom: 0.3px solid #E2E8F0;
+  transition: 0.5s ease;
+  cursor: pointer;
+  text-transform: capitalize;
 }
 
-li{
-  text-align: center;
-  list-style: none;
+.list-group-item:hover { 
+  border-color: white;
+  background-color: #e2e8f04d;
 }
+
+.list-group-item img { 
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 50%;
+  border: 1px solid black;
+  margin-right: 15px;
+  margin-left: 5px;
+}
+
+.list-group-item p { 
+  font-weight: 400;
+}
+
 .img-player{
   max-width: 120px;
   max-height: 120px;
@@ -333,7 +345,7 @@ li{
   z-index: 999;
 }
 .hidden{
-  visibility: hidden;
+  display: none;
 }
 
 .Player-container-plus-hide{
@@ -357,7 +369,6 @@ li{
 
 .container-flex{
   display: flex;
-  justify-content: center;
 }
 
 .container-flex-reverse{
@@ -369,8 +380,6 @@ li{
   top: 0;
   z-index: 9999;
   width: inherit;
-  max-height: 180px;
-  overflow: scroll;
 }
 
 
@@ -404,4 +413,8 @@ li{
 .radar-chart-category-att, .radar-chart-category-def{
   position: relative;
   z-index: 99999;
+}
+
+.equipe, input{
+  text-transform: capitalize;
 }
