--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,7 +10,7 @@ section{
   height: 100vh;
   width: 100vw;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 
 .Home-description{
