--- a/src/components/ProfileCompare/RadarChart.css
+++ b/src/components/ProfileCompare/RadarChart.css
@@ -1,8 +1,32 @@
 
+.absolute{
+  position: absolute;
+  width: 400px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.logo-team-first-player{
+  left: -200px
+}
+.logo-team-second-player{
+  right: -200px
+}
+.layer-radar{
+  background-color: #f2efe596;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.radar-chart, .chartjs-render-monitor{
+  position: relative;
+  z-index: 5;
+}
 .radar-chart, .radar-chart-category, section{
     background-color: #F2EFE5;
   }
-  
+
   .radar-chart-category{
     display: flex;
     justify-content: space-between;
@@ -24,101 +48,4 @@
   .radar-chart-category .active{
     color:#ffffff;
     background-color: #000000;
-  }
-  
-
-
-
-  .timeline {
-    width: 100%;
-    height: 100px;
-    max-width: 800px;
-    margin: 0 auto;
-    display: flex;      
-    justify-content: center;    
-  }
-  
-  .timeline .events {
-    position: relative;
-    background-color: #606060;
-    height: 3px;
-    width: 100%;
-    border-radius: 4px;
-    margin: 5em 0;
-   }
-  
-  .timeline .events ol {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  .timeline .events ul {
-    list-style: none;
-  }
-  
-  .timeline .events ul li {
-    display: inline-block;
-    width: 24.65%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .timeline .events ul li a {
-    font-family: 'Arapey', sans-serif;
-    font-style: italic;
-    font-size: 1.25em;
-    color: #606060;
-    text-decoration: none;
-    position: relative;
-    top: -32px;
-  }
-  
-  .timeline .events ul li a:after {
-    content: '';
-    position: absolute;
-    bottom: -25px;
-    left: 50%;
-    right: auto;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    border: 3px solid #606060;
-    background-color: #fff;
-    transition: 0.3s ease;
-    transform: translateX(-50%);
-  }
-  
-  .timeline .events ul li a:hover::after {
-    background-color: #194693;
-    border-color: #194693;
-  }
-  
-  .timeline .events ul li a.selected:after {
-    background-color: #194693;
-    border-color: #194693;
-  }
-              
-  .events-content {
-    width: 100%;
-    height: 100px;
-    max-width: 800px;
-    margin: 0 auto;
-    display: flex;      
-    justify-content: left;
-  }
-  
-  .events-content li {
-    display: none;
-    list-style: none;
-  }
-  
-  .events-content li.selected {
-    display: initial;
-  }
-  
-  .events-content li h2 {
-    font-weight: 500;
-    color: #919191;
-    font-size: 2.5em;
   }
