--- a/src/components/ProfileCompare/RadarChart.css
+++ b/src/components/ProfileCompare/RadarChart.css
@@ -19,11 +19,15 @@
   width: 100%;
   height: 100%;
 }
+.radar-chart{
+  height: 550px;
+}
 .radar-chart, .chartjs-render-monitor{
   position: relative;
   z-index: 5;
+  padding-bottom: 40px;
 }
-.radar-chart, .radar-chart-category, section{
+  .radar-chart, .radar-chart-category, section{
     background-color: #F2EFE5;
   }
 
