--- a/src/components/ProfileCompare/RadarChart.css
+++ b/src/components/ProfileCompare/RadarChart.css
@@ -6,18 +6,22 @@
   transform: translateY(-50%);
 }
 .logo-team-first-player{
-  left: -200px
+  left: -150px
 }
 .logo-team-second-player{
-  right: -200px
+  right: -150px
 }
 .layer-radar{
-  background-color: #f2efe596;
+  background-color: #f2efe5eb;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+.radar-chart-container{
+  min-height: 90vh;
+  width: 100%;
 }
 .radar-chart{
   height: 550px;
