--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -409,3 +409,6 @@ input::placeholder, input {
 .equipe, input{
 	text-transform: capitalize;
 }
+.logo-team-player{
+	margin-left: auto!important;
+}
