--- a/src/components/ProfileCompare/RadarChart.css
+++ b/src/components/ProfileCompare/RadarChart.css
@@ -1,15 +1,15 @@
 
 .absolute{
   position: absolute;
-  max-width: 50%;
-  top: 50%;
+  width: 300px;
+  top: 60%;
   transform: translateY(-50%);
 }
 .logo-team-first-player{
-  left: -150px
+  left: 50px
 }
 .logo-team-second-player{
-  right: -150px
+  right: 50px
 }
 .layer-radar{
   background-color: #f2efe5eb;
@@ -46,18 +46,25 @@
     width: 30%;
     margin: 20px auto;
   }
-  
-  
+
+
   .radar-chart-category button{
     font-family: 'Montserrat', sans-serif!important;
     padding: 10px 40px;
-    border: 1px solid black;
+    border: 1px solid var(--color-player-a);
     outline: none;
+    font-weight: 600;
     text-transform: uppercase;
     transition: 0.5s ease-out;
+    cursor: pointer;
   }
-  
+
+  .radar-chart-category button:hover {
+    color:var(--color-player-b);
+    background-color: var(--color-player-a);
+  }
+
   .radar-chart-category .active{
-    color:#ffffff;
-    background-color: #000000;
+    color:var(--color-player-b);
+    background-color: var(--color-player-a);
   }
