--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -297,6 +297,7 @@ input::placeholder, input {
 }
 .Stats-item p:first-child{
 	font-weight: bold;
+	font-size: 16px;
 }
 .Stats-item p:not(:nth-child(2)){
 	text-align: end;
@@ -380,10 +381,6 @@ input::placeholder, input {
 }
 .PlayerB .container-flex{
 	display: flex;
-	justify-content: flex-end;
-}
-.container-flex-reverse{
-	flex-direction: row-reverse;
 }
 .fixed{
 	position: fixed;
