--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -247,7 +247,7 @@ input::placeholder, input {
 	width: 100%;
 }
 .Player-info-container{
-	justify-content: flex-end;
+	justify-content: space-around;
 	align-items: center;
 	height: 95%;
 }
