--- a/src/components/ProfileCompare/ProfileCompare.css
+++ b/src/components/ProfileCompare/ProfileCompare.css
@@ -4,15 +4,16 @@
 	--color-player-b: #E2813A;
 }
 .layer {
-	background-color: #2d3142eb;
+	background-color: #2d3142;
 	position: absolute;
+  opacity: 0.98;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 }
 .PlayerB .layer {
-	background-color: #e2813aba;
+	background-color: #e2813a;
 }
 .Players-container .mb-10 {
 	color: #fff;
@@ -92,6 +93,7 @@ select option {
 	justify-content: space-between;
 }
 .Search-container input{
+  margin-bottom: 4px;
 	padding-left: 15px;
 	width: 75%;
 	height: 42px;
@@ -114,7 +116,7 @@ select option {
 	font-family: 'Montserrat', sans-serif;
 }
 .container .Search-container select{
-	background: url('../../assets/imgs/arrow-white.png') 92% / 12px no-repeat #ffffff;
+	background: url('../../assets/imgs/arrow-white.png') 86% / 12px no-repeat #ffffff;
 }
 .resizer {
 	position: absolute;
@@ -160,18 +162,26 @@ input::placeholder, input {
 .container ::-webkit-input-placeholder {
 	/* Chrome/Opera/Safari */
 	color: white;
+  font-weight: 600;
 }
 .container ::-moz-placeholder {
 	/* Firefox 19+ */
 	color: white;
+  font-weight: 600;
 }
 .container :-ms-input-placeholder {
 	/* IE 10+ */
 	color: white;
+  font-weight: 600;
 }
 .container :-moz-placeholder{
 	/* Firefox 18- */
 	color: white;
+  font-weight: 600!important;
+}
+.container input, .container select{
+  font-weight: 800;
+  font-size: 16px;
 }
 .Player-container ::-webkit-input-placeholder {
 	/* Chrome/Opera/Safari */
@@ -229,7 +239,8 @@ input::placeholder, input {
 	max-width: 120px;
 	max-height: 120px;
 	border-radius: 50%;
-	border: 3px solid white;
+	border: 2px solid #E2E8F0;
+	margin-bottom: 10px;
 }
 .img-team{
 	position: absolute;
@@ -238,23 +249,25 @@ input::placeholder, input {
 .Player-info-container{
 	justify-content: space-around;
 	align-items: center;
-	height: 85%;
+	height: 95%;
 }
 .Player-info{
+	line-height: 1.5;
 	display: flex;
 	justify-content: space-around;
-	width: 100%;
+	width: 110%;
 }
 .Stats-container{
 	display: flex;
-	overflow-x: hidden;
 	white-space: nowrap;
 	justify-content: center;
 	max-width: 720px;
 	align-items: center;
 	margin-left: 30px;
+  width: 110%;
 }
 .Stats-item-container{
+  margin: auto;
 	display: inline-block;
 	width: auto;
 }
@@ -270,12 +283,12 @@ input::placeholder, input {
 }
 .Stats-item{
 	width: 200px;
-	height: 100px;
+	height: 106px;
 	margin-right: 20px;
 	margin-bottom: 20px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-around;
 }
 .Stats-item p{
 	padding: 0 10px;
@@ -286,6 +299,7 @@ input::placeholder, input {
 }
 .Stats-item p:first-child{
 	font-weight: bold;
+	font-size: 16px;
 }
 .Stats-item p:not(:nth-child(2)){
 	text-align: end;
@@ -317,9 +331,11 @@ input::placeholder, input {
 	background-color: var(--color-player-b);
 }
 .all-content{
+  	width: 100%;
 	overflow-y: hidden;
 	height: 100%;
 	display: flex;
+	align-items: flex-end;
 }
 .up{
 	transform: translateY(-150%);
@@ -369,10 +385,6 @@ input::placeholder, input {
 }
 .PlayerB .container-flex{
 	display: flex;
-	justify-content: flex-end;
-}
-.container-flex-reverse{
-	flex-direction: row-reverse;
 }
 .fixed{
 	position: fixed;
